# PythonChessInterface

./: .gitignore  README.md  pyproject.toml
chess_engine/: readme.md
src/: board.py  fennotation.py  gui.py  main.py  piecesprite.py  position.py  window.py
src/chesspiece/: pawn.py  piece.py
